[gd_scene load_steps=2 format=3 uid="uid://43330p8bmmr2"]

[ext_resource type="Script" uid="uid://dsxtyl4t2g5fw" path="res://scenes/Lobby.gd" id="1_6jt0u"]

[node name="Lobby" type="Control" node_paths=PackedStringArray("slots_container", "status_label", "ip_input", "name_input", "host_btn", "join_btn", "leave_btn", "start_btn")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 28.0
offset_top = 10.0
offset_right = 28.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6jt0u")
slots_container = NodePath("SlotsContainer")
status_label = NodePath("StatusLabel")
ip_input = NodePath("IPInput")
name_input = NodePath("NameInput")
host_btn = NodePath("Buttons/HostBtn")
join_btn = NodePath("Buttons/JoinBtn")
leave_btn = NodePath("Buttons/LeaveBtn")
start_btn = NodePath("Buttons/StartBtn")

[node name="SlotsContainer" type="VBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_right = 0.017
anchor_bottom = 0.062000003
offset_left = 427.0
offset_top = 156.0
offset_right = 715.416
offset_bottom = 384.824

[node name="StatusLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 878.0
offset_top = 587.0
offset_right = 1085.0
offset_bottom = 619.0
text = "Not Connected"

[node name="IPInput" type="LineEdit" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 458.0
offset_top = 455.0
offset_right = 662.0
offset_bottom = 493.0
placeholder_text = "Host IP(xxx.x.x.x)"

[node name="NameInput" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 134.0
offset_top = 514.0
offset_right = 302.0
offset_bottom = 545.0
placeholder_text = "Enter Name"

[node name="Buttons" type="HBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 444.0
offset_top = 519.0
offset_right = 723.0
offset_bottom = 563.0

[node name="HostBtn" type="Button" parent="Buttons"]
unique_name_in_owner = true
layout_mode = 2
text = "Host"

[node name="JoinBtn" type="Button" parent="Buttons"]
unique_name_in_owner = true
layout_mode = 2
text = "Join"

[node name="LeaveBtn" type="Button" parent="Buttons"]
unique_name_in_owner = true
layout_mode = 2
text = "Leave
"

[node name="StartBtn" type="Button" parent="Buttons"]
unique_name_in_owner = true
layout_mode = 2
text = "Start"

[connection signal="pressed" from="Buttons/HostBtn" to="." method="_on_host_pressed"]
[connection signal="pressed" from="Buttons/JoinBtn" to="." method="_on_join_pressed"]
[connection signal="pressed" from="Buttons/LeaveBtn" to="." method="_on_leave_pressed"]
[connection signal="pressed" from="Buttons/StartBtn" to="." method="_on_start_pressed"]
